fix: category headline not centered (#66)

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -80,6 +80,10 @@ main {
   margin: 0 auto;
   width: 100rem;
   max-width: 100%;
+  
+  > h2 {
+    text-align: center;
+  }
 }
 
 .card {
